--- a/package.json
+++ b/package.json
@@ -33,14 +33,15 @@
     "db-local": "^2.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "uuidv4": "^6.2.13"
+    "uuidv4": "^6.2.13",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "29.2.4",
+    "@types/jest": "^29.2.6",
     "@types/lodash": "^4.14.168",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
@@ -58,7 +59,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.4"
   },
   "jest": {
     "moduleFileExtensions": [
